package gameLaby.laby;

public class CaseMur extends Case {
    public CaseMur(int x, int y){
        super(x, y, VariablesGlobales.COULEUR_MUR);
    }
}
